src/patternfly/components/Select/select.scss
/* ... */
.pf-c-select__toggle-arrow {
  * + & {
    margin-right: var(--pf-c-select__toggle-arrow--MarginRight);
    margin-left: var(--pf-c-select__toggle-arrow--MarginLeft);
  }
  // stylelint-disable-next-line
  .pf-c-select.pf-m-top.pf-m-expanded & {
    transform: rotate(var(--pf-c-select__toggle-arrow--m-top--m-expanded__toggle-arrow--Rotate));
  }
}

.pf-c-select__toggle-text {
  @include pf-text-overflow;
}

.pf-c-select__toggle-wrapper {
  display: flex;
  flex: 1;
  flex-wrap: wrap;
  align-items: center;
  justify-content: flex-start;

  // Max-width is needed for ellipsing the text. This leaves enough space for the toggle caret.
  // However, for cases where the clear icon button or a badge are added, the correct width will need to be calculated in script
  min-width: 0;
  max-width: var(--pf-c-select__toggle-wrapper--MaxWidth);
  white-space: normal;

  // Add space between children
  > :not(:last-child) {
    margin-right: var(--pf-c-select__toggle-wrapper--not-last-child--MarginRight);
  }

  // Remove during breaking change
  // if there is an input in the toggle-wrapper, then give it a negative top margin to match the typeahead top padding
  > .pf-c-form-control {
    margin-top: calc(-1 * var(--pf-c-select__toggle-wrapper--m-typeahead--PaddingTop));
  }

  // a chip group needs a bottom margin to make some space between the chip group and typeahead input box if it wraps
  .pf-c-chip-group {
    margin-top: var(--pf-c-select__toggle-wrapper--c-chip-group--MarginTop);
    margin-bottom: var(--pf-c-select__toggle-wrapper--c-chip-group--MarginBottom);
  }

  // When the input is the first thing then use a negative left padding so it matches the toggle container
  > .pf-c-select__toggle-typeahead:first-child {
    margin-left: calc(-1 * var(--pf-c-select__toggle--PaddingLeft));
  }
}

.pf-c-select__toggle-icon + .pf-c-select__toggle-text {
  margin-left: var(--pf-c-select__toggle-icon--toggle-text--MarginLeft);
}

.pf-c-select__toggle-badge {
  display: flex;
  padding-left: var(--pf-c-select__toggle-badge--PaddingLeft);
}

.pf-c-select__toggle-typeahead {
  flex-basis: var(--pf-c-select__toggle-typeahead--FlexBasis);
  flex-grow: 1;
  min-width: var(--pf-c-select__toggle-typeahead--MinWidth);
  background-color: var(--pf-c-select__toggle-typeahead--BackgroundColor);
  border-top: var(--pf-c-select__toggle-typeahead--BorderTop);
  border-right: var(--pf-c-select__toggle-typeahead--BorderRight);
  border-bottom-color: inherit;
  border-bottom-style: inherit;
  border-bottom-width: inherit;
  border-left: var(--pf-c-select__toggle-typeahead--BorderLeft);
  flex-shrink: 0;

  &:focus {
    // Set the bottom padding to allow for the bottom border width of the containing toggle
    // This is really var(--pf-c-form-control--PaddingBottom) but has to be recalculated instead of reusing another component's variable
    padding-bottom: var(--pf-c-select__toggle-typeahead--focus--PaddingBottom);
  }
}

.pf-c-select__menu {
  position: absolute;
  top: var(--pf-c-select__menu--Top);
  z-index: var(--pf-c-select__menu--ZIndex);
  min-width: 100%;
  padding-top: var(--pf-c-select__menu--PaddingTop);
  padding-bottom: var(--pf-c-select__menu--PaddingBottom);
  background-color: var(--pf-c-select__menu--BackgroundColor);
  background-clip: padding-box;
  box-shadow: var(--pf-c-select__menu--BoxShadow);

  &.pf-m-align-right {
    right: 0;
  }

  .pf-c-select.pf-m-top & {
    top: 0;
    transform: translateY(var(--pf-c-select__menu--m-top--TranslateY));
  }
}

.pf-c-select__menu-fieldset {
  border: 0;
}

.pf-c-select__menu-item {
  position: relative;
  width: 100%;
  padding: var(--pf-c-select__menu-item--PaddingTop) var(--pf-c-select__menu-item--PaddingRight) var(--pf-c-select__menu-item--PaddingBottom) var(--pf-c-select__menu-item--PaddingLeft);
  font-size: var(--pf-c-select__menu-item--FontSize);
  font-weight: var(--pf-c-select__menu-item--FontWeight);
  line-height: var(--pf-c-select__menu-item--LineHeight);
  color: var(--pf-c-select__menu-item--Color);
  text-align: left;
  white-space: nowrap;
  background-color: transparent;
  border: none;

  &:hover,
  &:focus,
  &.pf-m-focus {
    text-decoration: none;
  }

  &:hover {
    background-color: var(--pf-c-select__menu-item--hover--BackgroundColor);
  }

  &:focus,
  &.pf-m-focus {
    position: relative;
    background-color: var(--pf-c-select__menu-item--focus--BackgroundColor);
  }

  &:disabled,
  &.pf-m-disabled {
    color: var(--pf-c-select__menu-item--disabled--Color);
    pointer-events: none;
    background-color: var(--pf-c-select__menu-item--disabled--BackgroundColor);
  }

  &.pf-m-selected {
    --pf-c-select__menu-item--PaddingRight: var(--pf-c-select__menu-item--m-selected--PaddingRight);
  }

  &.pf-m-description {
    &:not(.pf-c-check) {
      --pf-c-select__menu-item--PaddingRight: 0;
    }

    white-space: normal;
  }
}

.pf-c-select__menu-item-main {
  position: relative;
  padding-right: var(--pf-c-select__menu-item-main--PaddingRight);
  white-space: nowrap;
}

.pf-c-select__menu-item-description {
  padding-right: var(--pf-c-select__menu-item-description--PaddingRight);
  font-size: var(--pf-c-select__menu-item-description--FontSize);
  color: var(--pf-c-select__menu-item-description--Color);
}

.pf-c-select__menu-item-icon {
  position: absolute;
  top: var(--pf-c-select__menu-item-icon--Top);
  right: var(--pf-c-select__menu-item-icon--Right);
  font-size: var(--pf-c-select__menu-item-icon--FontSize);
  color: var(--pf-c-select__menu-item-icon--Color);
  transform: translateY(var(--pf-c-select__menu-item-icon--TranslateY));
}

.pf-c-select__menu-item--match {
  font-weight: var(--pf-c-select__menu-item--match--FontWeight);
  background-color: inherit;
}

.pf-c-select__menu-group + .pf-c-select__menu-group {
  padding-top: var(--pf-c-select__menu-group--menu-group--PaddingTop);
}
/* ... */

